# fastimer

./: Cargo.toml  README.md
.github/: semantic.yml
.github/workflows/: ci.yml
fastimer/: Cargo.toml
fastimer-driver/: Cargo.toml  README.md
fastimer-driver/src/: heap.rs  lib.rs  tests.rs  timewheel.rs
fastimer-driver/tests/: integration.rs
fastimer-tokio/: Cargo.toml  README.md
fastimer-tokio/src/: lib.rs
fastimer-tokio/tests/: lifetime.rs
fastimer/examples/: schedule_arbitrary_delay.rs  schedule_at_fixed_rate.rs  schedule_by_notify.rs  schedule_with_arbitrary_delay.rs  schedule_with_fixed_delay.rs  simple_action.rs  static_time_driver.rs  time_driver.rs
fastimer/examples/common/: mod.rs
fastimer/src/: driver.rs  generic.rs  interval.rs  lib.rs  macros.rs  result.rs  simple.rs  timeout.rs  tokio.rs
fastimer/src/schedule/: arbitrary.rs  mod.rs  notify.rs  select.rs  simple.rs
fastimer/tests/: interval.rs  schedule.rs
fastimer/tests/common/: mod.rs
xtask/src/: main.rs
