# Copyright 2024 FastLabs Developers
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "fastimer"
version = "0.1.0"

description = "This crate implements runtime-agnostic driver for async timers and scheduled tasks."

edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
tokio = ["tokio-time", "tokio-spawn"]
tokio-spawn = ["dep:tokio", "tokio/rt-multi-thread"]
tokio-time = ["dep:tokio", "tokio/time"]

test = ["tokio"]

[dependencies]
log = { version = "0.4.22" }

tokio = { version = "1.42.0", default-features = false, optional = true }

[dev-dependencies]
logforth = { version = "0.19.0" }
tokio = { version = "1.42.0", features = ["full"] }

[lints]
workspace = true
