# Copyright 2024 FastLabs Developers
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "fastimer"
version = "0.2.3"

description = "This crate implements runtime-agnostic driver for async timers and scheduled tasks."

edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
driver = ["dep:atomic-waker", "dep:crossbeam-queue", "dep:parking"]
logging = ["dep:log"]
tokio = ["tokio-time", "tokio-spawn"]
tokio-spawn = ["dep:tokio", "tokio/rt-multi-thread"]
tokio-time = ["dep:tokio", "tokio/time"]

test = ["tokio", "driver", "logging"]

[dependencies]
pin-project = { version = "1.1.7" }

atomic-waker = { version = "1.1.2", optional = true }
crossbeam-queue = { version = "0.3.11", optional = true }
log = { version = "0.4.22", features = ["kv"], optional = true }
parking = { version = "2.2.1", optional = true }
tokio = { version = "1.42.0", optional = true }

[dev-dependencies]
log = { version = "0.4.22", features = ["kv"] }
logforth = { version = "0.19.0" }
mea = { version = "0.0.6" }
pollster = { version = "0.4.0" }
tokio = { version = "1.42.0", features = ["full"] }

[lints]
workspace = true

[[example]]
doc-scrape-examples = true
name = "simple_action"
path = "examples/simple_action.rs"
required-features = ["tokio", "logging"]

[[example]]
doc-scrape-examples = true
name = "time_driver"
path = "examples/time_driver.rs"
required-features = ["driver"]
