# Copyright 2024 FastLabs Developers
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "fastimer"

description = "This crate implements runtime-agnostic timer traits and utilities."

edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
logging = ["dep:log"]

[dependencies]
pin-project = { version = "1.1.9" }

# optional dependencies
log = { version = "0.4.22", features = ["kv"], optional = true }

[dev-dependencies]
log = { version = "0.4.22", features = ["kv"] }
logforth = { version = "0.24.0", features = ["colored"] }
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
